added offline svgs and final design

--- a/src/app/features/admin-user/components/admin-teams/admin-teams.html
+++ b/src/app/features/admin-user/components/admin-teams/admin-teams.html
@@ -18,42 +18,7 @@
   <div class="stats-container">
     <div class="stat-card">
       <div class="stat-icon">
-        <svg
-          width="28"
-          height="28"
-          viewBox="0 0 28 28"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            d="M10.3716 12.3065C10.2584 12.2952 10.1225 12.2952 9.99795 12.3065C7.30324 12.216 5.16333 10.0081 5.16333 7.29077C5.16333 4.51681 7.40514 2.26367 10.1904 2.26367C12.9644 2.26367 15.2175 4.51681 15.2175 7.29077C15.2062 10.0081 13.0663 12.216 10.3716 12.3065Z"
-            stroke="#00AC4F"
-            stroke-width="1.69834"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          />
-          <path
-            d="M18.5798 4.52734C20.7763 4.52734 22.5426 6.30494 22.5426 8.49015C22.5426 10.6301 20.8443 12.3737 18.727 12.4529C18.6364 12.4416 18.5345 12.4416 18.4326 12.4529"
-            stroke="#00AC4F"
-            stroke-width="1.69834"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          />
-          <path
-            d="M4.71051 16.4837C1.97052 18.3179 1.97052 21.307 4.71051 23.1299C7.82414 25.2132 12.9305 25.2132 16.0441 23.1299C18.7841 21.2956 18.7841 18.3066 16.0441 16.4837C12.9418 14.4117 7.83546 14.4117 4.71051 16.4837Z"
-            stroke="#00AC4F"
-            stroke-width="1.69834"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          />
-          <path
-            d="M20.7651 22.643C21.5803 22.4731 22.3503 22.1448 22.9843 21.6579C24.7506 20.3332 24.7506 18.148 22.9843 16.8233C22.3616 16.3478 21.603 16.0308 20.7991 15.8496"
-            stroke="#00AC4F"
-            stroke-width="1.69834"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          />
-        </svg>
+        <img src="svgs/profile-2user.svg" width="24" height="24" alt="Profile User" />
       </div>
       <div class="stat-content">
         <div class="stat-label">Total Teams</div>
@@ -62,35 +27,7 @@
     </div>
     <div class="stat-card">
       <div class="stat-icon">
-        <svg
-          width="26"
-          height="26"
-          viewBox="0 0 26 26"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            d="M15.5706 20.5414L17.2096 22.1804L20.4877 18.9023"
-            stroke="#00AC4F"
-            stroke-width="1.61747"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          />
-          <path
-            d="M13.1124 11.7209C13.0045 11.7101 12.8752 11.7101 12.7565 11.7209C10.1902 11.6346 8.15214 9.53191 8.15214 6.94396C8.14136 4.30209 10.2872 2.15625 12.9291 2.15625C15.5709 2.15625 17.7168 4.30209 17.7168 6.94396C17.7168 9.53191 15.668 11.6346 13.1124 11.7209Z"
-            stroke="#00AC4F"
-            stroke-width="1.61747"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          />
-          <path
-            d="M12.9286 23.5168C10.966 23.5168 9.0143 23.0208 7.52623 22.0287C4.91671 20.2818 4.91671 17.4351 7.52623 15.699C10.4916 13.7149 15.3548 13.7149 18.3201 15.699"
-            stroke="#00AC4F"
-            stroke-width="1.61747"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          />
-        </svg>
+        <img src="svgs/Group 10.svg" width="24" height="24" alt="Group" />
       </div>
       <div class="stat-content">
         <div class="stat-label">Members</div>
@@ -99,42 +36,7 @@
     </div>
     <div class="stat-card">
       <div class="stat-icon">
-        <svg
-          width="28"
-          height="28"
-          viewBox="0 0 28 28"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            d="M7.29162 2.26367H19.8707C23.9014 2.26367 24.9091 3.27136 24.9091 7.29077V14.4578C24.9091 18.4885 23.9014 19.4849 19.882 19.4849H7.29162C3.27221 19.4962 2.26453 18.4885 2.26453 14.4691V7.29077C2.26453 3.27136 3.27221 2.26367 7.29162 2.26367Z"
-            stroke="#00AC4F"
-            stroke-width="1.69834"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          />
-          <path
-            d="M13.5868 19.4961V24.9081"
-            stroke="#00AC4F"
-            stroke-width="1.69834"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          />
-          <path
-            d="M2.26453 14.7188H24.9091"
-            stroke="#00AC4F"
-            stroke-width="1.69834"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          />
-          <path
-            d="M8.4917 24.9082H18.6818"
-            stroke="#00AC4F"
-            stroke-width="1.69834"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          />
-        </svg>
+        <img src="svgs/monitor.svg" width="24" height="24" alt="monitor" />
       </div>
       <div class="stat-content">
         <div class="stat-label">Active Now</div>
@@ -153,45 +55,11 @@
         (input)="onSearch(searchQuery)"
         class="search-input"
       />
-      <svg
-        width="20"
-        height="20"
-        viewBox="0 0 24 24"
-        fill="none"
-        xmlns="http://www.w3.org/2000/svg"
-      >
-        <path
-          d="M11 19C15.4183 19 19 15.4183 19 11C19 6.58172 15.4183 3 11 3C6.58172 3 3 6.58172 3 11C3 15.4183 6.58172 19 11 19Z"
-          stroke="#888"
-          stroke-width="2"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-        />
-        <path
-          d="M21 21L16.65 16.65"
-          stroke="#888"
-          stroke-width="2"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-        />
-      </svg>
+      <img src="svgs/search.svg" width="20" height="20" alt="search" />
     </div>
     <button class="add-team-btn" (click)="onAddTeam()">
-      <svg
-        width="20"
-        height="20"
-        viewBox="0 0 24 24"
-        fill="none"
-        xmlns="http://www.w3.org/2000/svg"
-      >
-        <path
-          d="M12 5V19M5 12H19"
-          stroke="#1E7A60"
-          stroke-width="2"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-        />
-      </svg>
+      <img src="svgs/Add.svg" width="24" height="24" />
+
       Add Team
     </button>
   </div>
@@ -201,21 +69,7 @@
     <div class="filter-section">
       <button class="filter-btn">
         Filter
-        <svg
-          width="16"
-          height="16"
-          viewBox="0 0 24 24"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            d="M3 6H21M6 12H18M9 18H15"
-            stroke="currentColor"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          />
-        </svg>
+        <img src="svgs/filter-list.svg" width="20" height="20" alt="filter-list" />
       </button>
       <select class="status-filter">
         <option value="">Status</option>
@@ -265,42 +119,10 @@
               </td>
               <td class="action-cell">
                 <button class="action-btn edit-btn" (click)="editTeam(team)" title="Edit">
-                  <svg
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M12.5769 4.83789H6.6811C6.23434 4.83789 5.80588 5.01538 5.48997 5.33131C5.17406 5.64724 4.99658 6.07574 4.99658 6.52253V18.315C4.99658 18.7618 5.17406 19.1903 5.48997 19.5062C5.80588 19.8221 6.23434 19.9996 6.6811 19.9996H18.4727C18.9195 19.9996 19.348 19.8221 19.6639 19.5062C19.9798 19.1903 20.1573 18.7618 20.1573 18.315V12.4188"
-                      stroke="#737373"
-                      stroke-width="1.5"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                    />
-                    <path
-                      d="M17.9462 4.52335C18.2812 4.18825 18.7357 4 19.2096 4C19.6834 4 20.1379 4.18825 20.4729 4.52335C20.808 4.85845 20.9963 5.31293 20.9963 5.78683C20.9963 6.26073 20.808 6.71521 20.4729 7.05031L12.8817 14.643C12.6817 14.8428 12.4346 14.9891 12.1632 15.0683L9.74339 15.7759C9.67092 15.797 9.59409 15.7983 9.52096 15.7796C9.44783 15.7608 9.38107 15.7228 9.32769 15.6694C9.27431 15.616 9.23626 15.5492 9.21752 15.4761C9.19879 15.403 9.20005 15.3261 9.22119 15.2537L9.92869 12.8337C10.0083 12.5625 10.1549 12.3157 10.3549 12.116L17.9462 4.52335Z"
-                      stroke="#737373"
-                      stroke-width="1.5"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                    />
-                  </svg>
+                  <img src="svgs/edit.svg" width="24" height="24" alt="edit" />
                 </button>
                 <button class="action-btn delete-btn" (click)="deleteTeam(team)" title="Delete">
-                  <svg
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M10.6154 5.71429H13.3846C13.3846 5.35435 13.2387 5.00915 12.9791 4.75464C12.7194 4.50013 12.3672 4.35714 12 4.35714C11.6328 4.35714 11.2806 4.50013 11.0209 4.75464C10.7613 5.00915 10.6154 5.35435 10.6154 5.71429ZM9.23077 5.71429C9.23077 4.99441 9.52253 4.30402 10.0419 3.795C10.5612 3.28597 11.2656 3 12 3C12.7344 3 13.4388 3.28597 13.9581 3.795C14.4775 4.30402 14.7692 4.99441 14.7692 5.71429H20.3077C20.4913 5.71429 20.6674 5.78578 20.7972 5.91303C20.9271 6.04029 21 6.21289 21 6.39286C21 6.57283 20.9271 6.74542 20.7972 6.87268C20.6674 6.99994 20.4913 7.07143 20.3077 7.07143H19.5268L17.8583 19.0659C17.7451 19.8787 17.3354 20.6238 16.7048 21.1633C16.0742 21.7027 15.2656 22 14.4286 22H9.57138C8.73441 22 7.92578 21.7027 7.29522 21.1633C6.66465 20.6238 6.25485 19.8787 6.14169 19.0659L4.47323 7.07143H3.69231C3.5087 7.07143 3.33261 6.99994 3.20277 6.87268C3.07294 6.74542 3 6.57283 3 6.39286C3 6.21289 3.07294 6.04029 3.20277 5.91303C3.33261 5.78578 3.5087 5.71429 3.69231 5.71429H9.23077ZM10.6154 10.4643C10.6154 10.2843 10.5424 10.1117 10.4126 9.98446C10.2828 9.85721 10.1067 9.78571 9.92308 9.78571C9.73947 9.78571 9.56337 9.85721 9.43354 9.98446C9.30371 10.1117 9.23077 10.2843 9.23077 10.4643V17.25C9.23077 17.43 9.30371 17.6026 9.43354 17.7298C9.56337 17.8571 9.73947 17.9286 9.92308 17.9286C10.1067 17.9286 10.2828 17.8571 10.4126 17.7298C10.5424 17.6026 10.6154 17.43 10.6154 17.25V10.4643ZM14.0769 9.78571C14.2605 9.78571 14.4366 9.85721 14.5665 9.98446C14.6963 10.1117 14.7692 10.2843 14.7692 10.4643V17.25C14.7692 17.43 14.6963 17.6026 14.5665 17.7298C14.4366 17.8571 14.2605 17.9286 14.0769 17.9286C13.8933 17.9286 13.7172 17.8571 13.5874 17.7298C13.4576 17.6026 13.3846 17.43 13.3846 17.25V10.4643C13.3846 10.2843 13.4576 10.1117 13.5874 9.98446C13.7172 9.85721 13.8933 9.78571 14.0769 9.78571ZM7.51385 18.8826C7.5818 19.3702 7.82766 19.8172 8.20594 20.1408C8.58421 20.4644 9.06929 20.6428 9.57138 20.6429H14.4286C14.931 20.6431 15.4164 20.4649 15.7949 20.1413C16.1735 19.8176 16.4196 19.3705 16.4875 18.8826L18.1297 7.07143H5.87031L7.51385 18.8826Z"
-                      fill="#737373"
-                    />
-                  </svg>
+                  <img src="svgs/delete.svg" width="24" height="24" alt="delete" />
                 </button>
               </td>
             </tr>
