--- a/src/app/features/business-user/components/business-request-table/business-request-table.html
+++ b/src/app/features/business-user/components/business-request-table/business-request-table.html
@@ -28,90 +28,31 @@
               [style.background-color]="getStatusBgColor(request.status)"
               [style.color]="getStatusColor(request.status)"
             >
-              <svg
-                width="8"
-                height="8"
-                viewBox="0 0 8 8"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M3.75 0C3.00832 0 2.2833 0.219934 1.66661 0.631989C1.04993 1.04404 0.569282 1.62971 0.285453 2.31494C0.00162482 3.00016 -0.0726377 3.75416 0.0720569 4.48159C0.216751 5.20902 0.573904 5.8772 1.09835 6.40165C1.6228 6.9261 2.29098 7.28325 3.01841 7.42795C3.74584 7.57264 4.49984 7.49838 5.18506 7.21455C5.87029 6.93072 6.45596 6.45007 6.86801 5.83339C7.28007 5.2167 7.5 4.49168 7.5 3.75C7.5 2.75544 7.10491 1.80161 6.40165 1.09835C5.69839 0.395088 4.74456 0 3.75 0ZM3.75 4.6875C3.56458 4.6875 3.38333 4.63252 3.22915 4.5295C3.07498 4.42649 2.95482 4.28007 2.88386 4.10877C2.81291 3.93746 2.79434 3.74896 2.83052 3.5671C2.86669 3.38525 2.95598 3.2182 3.08709 3.08709C3.2182 2.95598 3.38525 2.86669 3.5671 2.83051C3.74896 2.79434 3.93746 2.81291 4.10877 2.88386C4.28007 2.95482 4.42649 3.07498 4.5295 3.22915C4.63252 3.38332 4.6875 3.56458 4.6875 3.75C4.6875 3.99864 4.58873 4.2371 4.41291 4.41291C4.2371 4.58873 3.99864 4.6875 3.75 4.6875Z"
-                  [attr.fill]="getStatusColor(request.status)"
-                />
-              </svg>
-
+              <span
+                class="svg-icon status-dot"
+                [style.background-color]="getStatusColor(request.status)"
+              ></span>
               {{ request.status }}
             </span>
           </td>
           <td>
             <span class="priority-badge">
-              <svg
-                width="18"
-                height="18"
-                viewBox="0 0 24 24"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-                [style.color]="getPriorityColor(request.priority)"
-              >
-                <path
-                  fill-rule="evenodd"
-                  clip-rule="evenodd"
-                  d="M18 14C18.1704 13.9999 18.3379 13.9563 18.4867 13.8733C18.6355 13.7902 18.7606 13.6706 18.8502 13.5256C18.9398 13.3806 18.9908 13.2152 18.9985 13.045C19.0061 12.8748 18.9702 12.7054 18.894 12.553L17.118 9L18.894 5.447C18.9702 5.29458 19.0061 5.12522 18.9985 4.95501C18.9908 4.78479 18.9398 4.61935 18.8502 4.47439C18.7606 4.32944 18.6355 4.20977 18.4867 4.12674C18.3379 4.04372 18.1704 4.00009 18 4H7V3C7 2.73478 6.89464 2.48043 6.70711 2.29289C6.51957 2.10536 6.26522 2 6 2C5.73478 2 5.48043 2.10536 5.29289 2.29289C5.10536 2.48043 5 2.73478 5 3V21C5 21.2652 5.10536 21.5196 5.29289 21.7071C5.48043 21.8946 5.73478 22 6 22C6.26522 22 6.51957 21.8946 6.70711 21.7071C6.89464 21.5196 7 21.2652 7 21V14H18Z"
-                  [attr.fill]="getPriorityColor(request.priority)"
-                />
-              </svg>
+              <span
+                class="svg-icon priority-icon"
+                [style.background-color]="getPriorityColor(request.priority)"
+              ></span>
             </span>
           </td>
           <td class="action-icons">
-            <button class="icon-btn" title="View" (click)="onViewRequest(request); $event.stopPropagation()">
-              <svg
-                width="22"
-                height="16"
-                viewBox="0 0 22 16"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  fill-rule="evenodd"
-                  clip-rule="evenodd"
-                  d="M20.7 7.7004C18.953 11.2766 14.5775 14.7002 10.6997 14.7002C6.82196 14.7002 2.44641 11.2766 0.699951 7.69997"
-                  stroke="#737373"
-                  stroke-width="1.4"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-                <path
-                  fill-rule="evenodd"
-                  clip-rule="evenodd"
-                  d="M20.7 7.7004C18.953 4.12418 14.5782 0.700195 10.7004 0.700195C6.82266 0.700195 2.44641 4.12333 0.699951 7.69997"
-                  stroke="#737373"
-                  stroke-width="1.4"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-                <path
-                  d="M13.7 7.7002C13.7 9.35705 12.3568 10.7002 10.7 10.7002C9.0431 10.7002 7.69995 9.35705 7.69995 7.7002C7.69995 6.04334 9.0431 4.7002 10.7 4.7002C12.3568 4.7002 13.7 6.04334 13.7 7.7002Z"
-                  stroke="#737373"
-                  stroke-width="1.4"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-              </svg>
+            <button
+              class="icon-btn"
+              title="View"
+              (click)="onViewRequest(request); $event.stopPropagation()"
+            >
+              <img src="svgs/eye-open.svg" width="24" height="24" alt="eye-open" />
             </button>
             <button class="icon-btn" title="comment">
-              <svg
-                width="18"
-                height="16"
-                viewBox="0 0 18 16"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M4.192 10.616H5.26C5.36733 10.616 5.46733 10.5973 5.56 10.56C5.65333 10.5227 5.74333 10.4603 5.83 10.373L10.858 5.346C10.944 5.24733 11.0083 5.144 11.051 5.036C11.0937 4.928 11.1153 4.82067 11.116 4.714C11.1167 4.60733 11.094 4.50167 11.048 4.397C11.0033 4.293 10.94 4.19133 10.858 4.092L9.938 3.142C9.85267 3.056 9.75367 2.99167 9.641 2.949C9.52767 2.90633 9.416 2.885 9.306 2.885C9.19933 2.885 9.092 2.90633 8.984 2.949C8.876 2.99167 8.77233 3.056 8.673 3.142L3.627 8.17C3.54033 8.25733 3.47833 8.34733 3.441 8.44C3.40367 8.53333 3.385 8.634 3.385 8.742V9.809C3.385 10.041 3.46167 10.2337 3.615 10.387C3.76833 10.5403 3.96067 10.616 4.192 10.616ZM4.269 9.73V8.78L7.717 5.332L8.179 5.82L8.648 6.301L5.219 9.73H4.269ZM8.179 5.82L8.648 6.301L7.718 5.331L8.179 5.82ZM8.809 10.615H14.116C14.258 10.615 14.3767 10.567 14.472 10.471C14.568 10.3757 14.616 10.257 14.616 10.115C14.616 9.97233 14.568 9.85333 14.472 9.758C14.3767 9.66267 14.2577 9.615 14.115 9.615H9.81L8.809 10.615ZM3.078 14L1.374 15.704C1.12133 15.9567 0.829333 16.0147 0.498 15.878C0.166667 15.7413 0.000666667 15.493 0 15.133V1.616C0 1.15533 0.154333 0.771 0.463 0.463C0.771667 0.155 1.156 0.000666667 1.616 0H16.385C16.845 0 17.2293 0.154333 17.538 0.463C17.8467 0.771667 18.0007 1.156 18 1.616V12.385C18 12.845 17.846 13.2293 17.538 13.538C17.23 13.8467 16.8457 14.0007 16.385 14H3.078ZM2.651 13H16.386C16.5393 13 16.6803 12.936 16.809 12.808C16.9377 12.68 17.0017 12.539 17.001 12.385V1.615C17.001 1.46167 16.937 1.32067 16.809 1.192C16.681 1.06333 16.5397 0.999333 16.385 1H1.615C1.46167 1 1.32067 1.064 1.192 1.192C1.06333 1.32 0.999333 1.461 1 1.615V14.645L2.651 13Z"
-                  fill="#737373"
-                />
-              </svg>
+              <img src="svgs/comment.svg" width="24" height="24" alt="comment" />
             </button>
           </td>
         </tr>
