--- a/src/app/features/qc-user/components/reject-modal/reject-modal.html
+++ b/src/app/features/qc-user/components/reject-modal/reject-modal.html
@@ -3,10 +3,8 @@
     <button class="close-btn" (click)="onCancel()">×</button>
     
     <div class="icon-container">
-      <svg width="58" height="58" viewBox="0 0 72 72" fill="none" xmlns="http://www.w3.org/2000/svg">
-<circle cx="36" cy="36" r="36" fill="#FFDCDD"/>
-<path d="M49.3844 28.8656L40.6344 20.1156C40.5182 19.9996 40.3803 19.9076 40.2286 19.8448C40.0768 19.7821 39.9142 19.7499 39.75 19.75H24.75C24.087 19.75 23.4511 20.0134 22.9822 20.4822C22.5134 20.9511 22.25 21.587 22.25 22.25V49.75C22.25 50.413 22.5134 51.0489 22.9822 51.5178C23.4511 51.9866 24.087 52.25 24.75 52.25H47.25C47.913 52.25 48.5489 51.9866 49.0178 51.5178C49.4866 51.0489 49.75 50.413 49.75 49.75V29.75C49.7501 29.5858 49.7179 29.4232 49.6552 29.2714C49.5924 29.1197 49.5004 28.9818 49.3844 28.8656ZM41 24.0172L45.4828 28.5H41V24.0172ZM47.25 49.75H24.75V22.25H38.5V29.75C38.5 30.0815 38.6317 30.3995 38.8661 30.6339C39.1005 30.8683 39.4185 31 39.75 31H47.25V49.75ZM40.6344 36.8844L37.7672 39.75L40.6344 42.6156C40.7505 42.7318 40.8426 42.8696 40.9055 43.0214C40.9683 43.1731 41.0007 43.3358 41.0007 43.5C41.0007 43.6642 40.9683 43.8269 40.9055 43.9786C40.8426 44.1304 40.7505 44.2682 40.6344 44.3844C40.5182 44.5005 40.3804 44.5926 40.2286 44.6555C40.0769 44.7183 39.9142 44.7507 39.75 44.7507C39.5858 44.7507 39.4231 44.7183 39.2714 44.6555C39.1196 44.5926 38.9818 44.5005 38.8656 44.3844L36 41.5172L33.1344 44.3844C33.0182 44.5005 32.8804 44.5926 32.7286 44.6555C32.5769 44.7183 32.4142 44.7507 32.25 44.7507C32.0858 44.7507 31.9231 44.7183 31.7714 44.6555C31.6196 44.5926 31.4818 44.5005 31.3656 44.3844C31.2495 44.2682 31.1574 44.1304 31.0945 43.9786C31.0317 43.8269 30.9993 43.6642 30.9993 43.5C30.9993 43.3358 31.0317 43.1731 31.0945 43.0214C31.1574 42.8696 31.2495 42.7318 31.3656 42.6156L34.2328 39.75L31.3656 36.8844C31.1311 36.6498 30.9993 36.3317 30.9993 36C30.9993 35.6683 31.1311 35.3502 31.3656 35.1156C31.6002 34.8811 31.9183 34.7493 32.25 34.7493C32.5817 34.7493 32.8998 34.8811 33.1344 35.1156L36 37.9828L38.8656 35.1156C38.9818 34.9995 39.1196 34.9074 39.2714 34.8445C39.4231 34.7817 39.5858 34.7493 39.75 34.7493C39.9142 34.7493 40.0769 34.7817 40.2286 34.8445C40.3804 34.9074 40.5182 34.9995 40.6344 35.1156C40.7505 35.2318 40.8426 35.3696 40.9055 35.5214C40.9683 35.6731 41.0007 35.8358 41.0007 36C41.0007 36.1642 40.9683 36.3269 40.9055 36.4786C40.8426 36.6304 40.7505 36.7682 40.6344 36.8844Z" fill="#FF0000"/>
-</svg>
+                     <img src="svgs/reject.svg" width="58" height="58" alt="reject" />
+
 
     </div>
 
@@ -27,81 +25,6 @@
         rows="4"
         [(ngModel)]="rejectionReason"
       ></textarea>
-      <div class="formatting-icons">
-       <svg
-                width="20"
-                height="20"
-                viewBox="0 0 24 24"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M6 4H18C19.1046 4 20 4.89543 20 6V16C20 17.1046 19.1046 18 18 18H7L4 21V6C4 4.89543 4.89543 4 6 4Z"
-                  stroke="#999"
-                  stroke-width="1.5"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-              </svg>
-              <svg
-                width="20"
-                height="20"
-                viewBox="0 0 24 24"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M3 12H21M3 6H21M3 18H21"
-                  stroke="#999"
-                  stroke-width="1.5"
-                  stroke-linecap="round"
-                />
-              </svg>
-              <svg
-                width="20"
-                height="20"
-                viewBox="0 0 24 24"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M5 12C5 12 8 7 12 7C16 7 19 12 12 17C8 17 5 12 5 12Z"
-                  stroke="#999"
-                  stroke-width="1.5"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-              </svg>
-              <svg
-                width="20"
-                height="20"
-                viewBox="0 0 24 24"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M5 8C3.89543 8 3 8.89543 3 10V16C3 17.1046 3.89543 18 5 18H19C20.1046 18 21 17.1046 21 16V10C21 8.89543 20.1046 8 19 8"
-                  stroke="#999"
-                  stroke-width="1.5"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-              </svg>
-              <svg
-                width="20"
-                height="20"
-                viewBox="0 0 24 24"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M12 5V19M5 12H19"
-                  stroke="#999"
-                  stroke-width="1.5"
-                  stroke-linecap="round"
-                />
-              </svg>
-      </div>
     </div>
 
     <div class="button-group">
