--- a/src/app/features/qc-user/components/request-details-page/request-details-page.html
+++ b/src/app/features/qc-user/components/request-details-page/request-details-page.html
@@ -29,26 +29,7 @@
 
         <div class="dashboard-url-section">
           <div class="dashboard-title">
-            <svg
-              width="14"
-              height="14"
-              viewBox="0 0 14 14"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <g clip-path="url(#clip0_326_58371)">
-                <path
-                  d="M3.92138 13.8603C3.01628 13.8603 2.16858 13.4718 1.55678 12.8523C0.370278 11.6511 0.0398785 9.55462 1.70308 7.87112L8.52668 0.96212C9.21828 0.26212 10.0982 -0.00878046 10.9403 0.22012C11.7684 0.44412 12.446 1.13082 12.6679 1.96872C12.8933 2.82272 12.6266 3.71382 11.9357 4.41382L5.40958 11.0218C5.03718 11.3991 4.61578 11.6224 4.19298 11.6672C3.77368 11.712 3.37398 11.5762 3.09398 11.2927C2.58718 10.7775 2.51438 9.81082 3.35858 8.95682L7.94218 4.31582C8.13048 4.12542 8.43568 4.12542 8.62398 4.31582C8.81228 4.50622 8.81228 4.81562 8.62398 5.00602L4.03968 9.64772C3.64348 10.0481 3.60708 10.431 3.77578 10.6025C3.84998 10.6767 3.96198 10.711 4.09148 10.6963C4.28958 10.676 4.51568 10.5451 4.72778 10.3316L11.2539 3.72432C11.7019 3.27072 11.8734 2.73732 11.7369 2.22282C11.6688 1.97116 11.5367 1.74139 11.3536 1.55582C11.1705 1.37024 10.9425 1.23517 10.6918 1.16372C10.1836 1.02582 9.65578 1.20012 9.20778 1.65372L2.38418 8.56272C1.11298 9.85002 1.41748 11.3319 2.23788 12.1628C3.05898 12.9937 4.52128 13.3031 5.79318 12.0144L12.6168 5.10542C12.6613 5.06017 12.7143 5.02423 12.7729 4.9997C12.8314 4.97517 12.8942 4.96253 12.9577 4.96253C13.0211 4.96253 13.084 4.97517 13.1425 4.9997C13.201 5.02423 13.2541 5.06017 13.2986 5.10542C13.3892 5.19758 13.4399 5.32164 13.4399 5.45087C13.4399 5.5801 13.3892 5.70416 13.2986 5.79632L6.47498 12.7053C5.67068 13.5187 4.76978 13.8603 3.92138 13.8603Z"
-                  fill="#2A2A2A"
-                  fill-opacity="0.5"
-                />
-              </g>
-              <defs>
-                <clipPath id="clip0_326_58371">
-                  <rect width="14" height="14" fill="white" />
-                </clipPath>
-              </defs>
-            </svg>
+            <img src="svgs/attachment.svg" width="12" height="12" alt="attachment" />
 
             <span class="url-label">Dashboard URL</span>
           </div>
@@ -242,22 +223,13 @@
             <option value="incomplete">Incomplete Data</option>
             <option value="guidelines">Doesn't Follow Guidelines</option>
           </select>
-          <svg
-            class="select-arrow"
+          <img
+            class="menu-arrow"
+            src="svgs/arrow-up-simple.svg"
             width="12"
-            height="8"
-            viewBox="0 0 12 8"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              d="M1 1.5L6 6.5L11 1.5"
-              stroke="#666"
-              stroke-width="1.5"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            />
-          </svg>
+            height="12"
+            class="select-arrow"
+          />
         </div>
       </div>
 
@@ -273,105 +245,19 @@
           ></textarea>
           <div class="comment-toolbar">
             <button class="toolbar-btn" title="Text formatting">
-              <svg
-                width="16"
-                height="16"
-                viewBox="0 0 24 24"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M4 7V4H20V7M9 20H15M12 4V20"
-                  stroke="#999"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-              </svg>
+              <img src="svgs/T-comment.svg" width="22" height="22" />
             </button>
             <button class="toolbar-btn" title="Bold">
-              <svg
-                width="16"
-                height="16"
-                viewBox="0 0 24 24"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M6 4H14C15.0609 4 16.0783 4.42143 16.8284 5.17157C17.5786 5.92172 18 6.93913 18 8C18 9.06087 17.5786 10.0783 16.8284 10.8284C16.0783 11.5786 15.0609 12 14 12H6V4Z"
-                  stroke="#999"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-                <path
-                  d="M6 12H15C16.0609 12 17.0783 12.4214 17.8284 13.1716C18.5786 13.9217 19 14.9391 19 16C19 17.0609 18.5786 18.0783 17.8284 18.8284C17.0783 19.5786 16.0609 20 15 20H6V12Z"
-                  stroke="#999"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-              </svg>
+              <img src="svgs/doc-comment.svg" width="22" height="22" />
             </button>
             <button class="toolbar-btn" title="Emoji">
-              <svg
-                width="16"
-                height="16"
-                viewBox="0 0 24 24"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <circle cx="12" cy="12" r="10" stroke="#999" stroke-width="2" />
-                <path
-                  d="M8 14C8 14 9.5 16 12 16C14.5 16 16 14 16 14"
-                  stroke="#999"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                />
-                <circle cx="9" cy="9" r="1" fill="#999" />
-                <circle cx="15" cy="9" r="1" fill="#999" />
-              </svg>
+              <img src="svgs/happy_light.svg" width="22" height="22" />
             </button>
             <button class="toolbar-btn" title="Link">
-              <svg
-                width="16"
-                height="16"
-                viewBox="0 0 24 24"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M10 13C10.4295 13.5741 10.9774 14.0492 11.6066 14.3929C12.2357 14.7367 12.9315 14.9411 13.6467 14.9923C14.3618 15.0435 15.0796 14.9403 15.7513 14.6898C16.4231 14.4392 17.0331 14.0471 17.54 13.54L20.54 10.54C21.4508 9.59699 21.9548 8.33397 21.9434 7.02299C21.932 5.71201 21.4061 4.45794 20.4791 3.53087C19.5521 2.60379 18.298 2.07802 16.987 2.0666C15.676 2.05519 14.413 2.55918 13.47 3.47L11.75 5.18"
-                  stroke="#999"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-                <path
-                  d="M14 11C13.5705 10.4259 13.0226 9.95083 12.3934 9.60707C11.7642 9.26331 11.0685 9.05889 10.3533 9.00768C9.63816 8.95646 8.92037 9.05967 8.24861 9.31022C7.57685 9.56077 6.96684 9.9529 6.45996 10.46L3.45996 13.46C2.54917 14.403 2.04518 15.666 2.05659 16.977C2.06801 18.288 2.59378 19.5421 3.52085 20.4691C4.44793 21.3962 5.702 21.922 7.01298 21.9334C8.32396 21.9448 9.58698 21.4408 10.53 20.53L12.24 18.82"
-                  stroke="#999"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-              </svg>
+              <img src="svgs/Img_load_box.svg" width="22" height="22" />
             </button>
             <button class="toolbar-btn" title="Attachment">
-              <svg
-                width="16"
-                height="16"
-                viewBox="0 0 24 24"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M21.44 11.05L12.25 20.24C11.1242 21.3658 9.59723 21.9983 8.005 21.9983C6.41277 21.9983 4.88583 21.3658 3.76 20.24C2.63417 19.1142 2.00166 17.5872 2.00166 15.995C2.00166 14.4028 2.63417 12.8758 3.76 11.75L12.33 3.18C13.0806 2.42944 14.0988 2.00667 15.16 2.00667C16.2212 2.00667 17.2394 2.42944 17.99 3.18C18.7406 3.93056 19.1633 4.94877 19.1633 6.01C19.1633 7.07123 18.7406 8.08944 17.99 8.84L9.41 17.41C9.03472 17.7853 8.52556 17.9967 7.995 17.9967C7.46444 17.9967 6.95528 17.7853 6.58 17.41C6.20472 17.0347 5.99334 16.5256 5.99334 15.995C5.99334 15.4644 6.20472 14.9553 6.58 14.58L15.07 6.1"
-                  stroke="#999"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-              </svg>
+              <img src="svgs/paper_clip_light.svg" width="22" height="22" />
             </button>
           </div>
         </div>
@@ -381,39 +267,13 @@
     <!-- Action Buttons -->
     <div class="action-buttons">
       <button class="btn-reject" (click)="openRejectModal()">
-        <svg
-          width="16"
-          height="16"
-          viewBox="0 0 24 24"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            d="M18 6L6 18M6 6L18 18"
-            stroke="currentColor"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          />
-        </svg>
+                                                                 <img src="svgs/Vector.svg" width="12" height="12"/>
+
         Reject
       </button>
       <button class="btn-approve" (click)="openApproveModal()">
-        <svg
-          width="16"
-          height="16"
-          viewBox="0 0 24 24"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            d="M20 6L9 17L4 12"
-            stroke="currentColor"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          />
-        </svg>
+                                                               <img src="svgs/check-approve.svg" width="20" height="20"/>
+
         Approve
       </button>
     </div>
