--- a/src/app/features/admin-user/components/admin-review-sidebar/admin-review-sidebar.html
+++ b/src/app/features/admin-user/components/admin-review-sidebar/admin-review-sidebar.html
@@ -9,21 +9,7 @@
       [class.active]="activeMenuItem === 'overview'"
       (click)="selectMenuItem('overview')"
     >
-      <svg
-        width="24"
-        height="24"
-        viewBox="0 0 24 24"
-        fill="none"
-        xmlns="http://www.w3.org/2000/svg"
-      >
-        <path
-          d="M14 20V14C14 12.8954 13.1046 12 12 12C10.8954 12 10 12.8954 10 14V20M10.9833 3.60011L4.98335 7.14177C4.37395 7.50149 4 8.15646 4 8.8641V18C4 19.1046 4.89543 20 6 20H18C19.1046 20 20 19.1046 20 18V8.8641C20 8.15646 19.6261 7.50149 19.0167 7.14177L13.0167 3.60011C12.3894 3.22988 11.6106 3.22988 10.9833 3.60011Z"
-          stroke="#1E7A60"
-          stroke-width="1.4"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-        />
-      </svg>
+      <img src="svgs/Home.svg" width="24" height="24" alt="Home" />
 
       <span class="menu-label">Overview</span>
     </div>
@@ -34,38 +20,10 @@
       [class.active]="activeMenuItem === 'add-team'"
       (click)="selectMenuItem('add-team')"
     >
-    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-<path d="M18.5051 19H20C21.1046 19 22.0669 18.076 21.716 17.0286C21.1812 15.4325 19.8656 14.4672 17.5527 14.1329M14.5001 10.8645C14.7911 10.9565 15.1244 11 15.5 11C17.1667 11 18 10.1429 18 8C18 5.85714 17.1667 5 15.5 5C15.1244 5 14.7911 5.04354 14.5001 5.13552M9.5 14C13.1135 14 15.0395 15.0095 15.716 17.0286C16.0669 18.076 15.1046 19 14 19H5C3.89543 19 2.93311 18.076 3.28401 17.0286C3.96047 15.0095 5.88655 14 9.5 14ZM9.5 11C11.1667 11 12 10.1429 12 8C12 5.85714 11.1667 5 9.5 5C7.83333 5 7 5.85714 7 8C7 10.1429 7.83333 11 9.5 11Z" stroke="#888888" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round"/>
-</svg>
-
+      <img src="svgs/user-group.svg" width="24" height="24" alt="user-group" />
 
       <span class="menu-label">Teams</span>
     </div>
-
-    <!-- Users Menu Item -->
-    <!-- <div
-      class="menu-item"
-      [class.active]="activeMenuItem === 'users'"
-      (click)="selectMenuItem('users')"
-    >
-      <svg
-        width="24"
-        height="24"
-        viewBox="0 0 24 24"
-        fill="none"
-        xmlns="http://www.w3.org/2000/svg"
-      >
-        <path
-          d="M17 20H21V18C21 16.3431 19.6569 15 18 15C17.5957 15 17.202 15.0662 16.8358 15.1877M16 3.13951C16.8784 2.50267 17.99 2 19.25 2C21.4591 2 23.25 3.79086 23.25 6C23.25 8.20914 21.4591 10 19.25 10C17.99 10 16.8784 9.49733 16 8.86049M15 20H3V18C3 16.3431 4.34315 15 6 15C7.65685 15 9 16.3431 9 18V20H15ZM12 9C13.6569 9 15 7.65685 15 6C15 4.34315 13.6569 3 12 3C10.3431 3 9 4.34315 9 6C9 7.65685 10.3431 9 12 9Z"
-          stroke="#888888"
-          stroke-width="1.5"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-        />
-      </svg>
-
-      <span class="menu-label">Users</span>
-    </div> -->
 
     <!-- Settings Menu Item -->
     <div
@@ -73,11 +31,7 @@
       [class.active]="activeMenuItem === 'settings'"
       (click)="selectMenuItem('settings')"
     >
-      <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-<path d="M9.65202 4.56614C9.85537 3.65106 10.667 3 11.6044 3H12.3957C13.3331 3 14.1447 3.65106 14.3481 4.56614L14.551 5.47935C15.2121 5.73819 15.8243 6.09467 16.3697 6.53105L17.2639 6.24961C18.1581 5.96818 19.1277 6.34554 19.5964 7.15735L19.9921 7.84264C20.4608 8.65445 20.3028 9.68287 19.612 10.3165L18.9218 10.9496C18.9733 11.2922 19.0001 11.643 19.0001 12C19.0001 12.357 18.9733 12.7078 18.9218 13.0504L19.612 13.6835C20.3028 14.3171 20.4608 15.3455 19.9921 16.1574L19.5965 16.8426C19.1278 17.6545 18.1581 18.0318 17.2639 17.7504L16.3698 17.4689C15.8243 17.9053 15.2121 18.2618 14.551 18.5206L14.3481 19.4339C14.1447 20.3489 13.3331 21 12.3957 21H11.6044C10.667 21 9.85537 20.3489 9.65202 19.4339L9.44909 18.5206C8.78796 18.2618 8.17579 17.9053 7.63034 17.4689L6.73614 17.7504C5.84199 18.0318 4.87234 17.6545 4.40364 16.8426L4.00798 16.1573C3.53928 15.3455 3.69731 14.3171 4.38811 13.6835L5.07833 13.0504C5.02678 12.7077 5.00005 12.357 5.00005 12C5.00005 11.643 5.02678 11.2922 5.07833 10.9496L4.38813 10.3165C3.69732 9.68288 3.5393 8.65446 4.008 7.84265L4.40365 7.15735C4.87235 6.34554 5.842 5.96818 6.73616 6.24962L7.63035 6.53106C8.1758 6.09467 8.78796 5.73819 9.44909 5.47935L9.65202 4.56614Z" stroke="#888888" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round"/>
-<path d="M13 12C13 12.5523 12.5523 13 12 13C11.4477 13 11 12.5523 11 12C11 11.4477 11.4477 11 12 11C12.5523 11 13 11.4477 13 12Z" stroke="#888888" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round"/>
-</svg>
-
+      <img src="svgs/settings.svg" width="24" height="24" alt="settings" />
 
       <span class="menu-label">Settings</span>
     </div>
@@ -86,22 +40,8 @@
   <!-- Logout Section -->
   <div class="sidebar-section sidebar-footer">
     <div class="menu-item" (click)="logout()">
-      <svg
-        class="menu-icon"
-        width="20"
-        height="20"
-        viewBox="0 0 24 24"
-        fill="none"
-        xmlns="http://www.w3.org/2000/svg"
-      >
-        <path
-          d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4M16 17l5-5m0 0l-5-5m5 5H9"
-          stroke="currentColor"
-          stroke-width="2"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-        />
-      </svg>
+      <img src="svgs/log-out.svg" width="24" height="24" alt="log-out" />
+
       <span class="menu-label">Logout</span>
     </div>
   </div>
