--- a/src/app/features/auth/components/login/login.css
+++ b/src/app/features/auth/components/login/login.css
@@ -14,7 +14,7 @@
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   width: 100%;
   max-width: 450px;
-  height: 450px;
+  /* height: 450px; */
 }
 
 .login-card h1 {
