--- a/src/app/features/auth/components/login/login.html
+++ b/src/app/features/auth/components/login/login.html
@@ -30,14 +30,12 @@
             [class.is-invalid]="submitted && f['password'].errors"
           />
           <button type="button" class="eye-icon" (click)="showPassword = !showPassword">
-            <svg *ngIf="!showPassword" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-              <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
-              <circle cx="12" cy="12" r="3"></circle>
-            </svg>
-            <svg *ngIf="showPassword" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <img  src="svgs/view.svg" width="20" height="20" alt="view password" />
+
+            <!-- <svg *ngIf="showPassword" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
               <path d="M17.94 17.94A10.07 10.07 0 0 1 12 20c-7 0-11-8-11-8a18.45 18.45 0 0 1 5.06-5.94M9.9 4.24A9.12 9.12 0 0 1 12 4c7 0 11 8 11 8a18.5 18.5 0 0 1-2.16 3.19m-6.72-1.07a3 3 0 1 1-4.24-4.24"></path>
               <line x1="1" y1="1" x2="23" y2="23"></line>
-            </svg>
+            </svg> -->
           </button>
         </div>
         <div *ngIf="submitted && f['password'].errors" class="invalid-feedback">
@@ -46,7 +44,7 @@
         </div>
       </div>
 
-      <div class="form-options">
+      <!-- <div class="form-options">
         <div class="checkbox-wrapper">
           <input 
             type="checkbox" 
@@ -56,7 +54,7 @@
           <label for="remember" class="remember-label">Remember me</label>
         </div>
         <a href="#" class="forgot-password">Forgot password?</a>
-      </div>
+      </div> -->
 
       <div *ngIf="error" class="alert alert-danger">{{ error }}</div>
 
@@ -69,8 +67,8 @@
       </button>
     </form>
 
-    <div class="signup-link">
+    <!-- <div class="signup-link">
       <span>Don't have an account?</span><a href="#">Create an account</a>
-    </div>
+    </div> -->
   </div>
 </div>
