--- a/src/app/features/business-user/components/business-request-details-page/business-request-details-page.html
+++ b/src/app/features/business-user/components/business-request-details-page/business-request-details-page.html
@@ -21,26 +21,7 @@
         <h2 class="modal-title">{{ selectedRequest.name }}</h2>
         <p class="request-id">Request ID: {{ selectedRequest.id }}</p>
         <div class="section">
-          <svg
-            width="14"
-            height="14"
-            viewBox="0 0 14 14"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <g clip-path="url(#clip0_326_57050)">
-              <path
-                d="M3.9215 13.8603C3.0164 13.8603 2.1687 13.4718 1.5569 12.8523C0.3704 11.6511 0.0400006 9.55462 1.7032 7.87112L8.5268 0.96212C9.2184 0.26212 10.0983 -0.00878046 10.9404 0.22012C11.7685 0.44412 12.4461 1.13082 12.668 1.96872C12.8934 2.82272 12.6267 3.71382 11.9358 4.41382L5.4097 11.0218C5.0373 11.3991 4.6159 11.6224 4.1931 11.6672C3.7738 11.712 3.3741 11.5762 3.0941 11.2927C2.5873 10.7775 2.5145 9.81082 3.3587 8.95682L7.9423 4.31582C8.1306 4.12542 8.4358 4.12542 8.6241 4.31582C8.8124 4.50622 8.8124 4.81562 8.6241 5.00602L4.0398 9.64772C3.6436 10.0481 3.6072 10.431 3.7759 10.6025C3.8501 10.6767 3.9621 10.711 4.0916 10.6963C4.2897 10.676 4.5158 10.5451 4.7279 10.3316L11.254 3.72432C11.702 3.27072 11.8735 2.73732 11.737 2.22282C11.6689 1.97116 11.5369 1.74139 11.3537 1.55582C11.1706 1.37024 10.9426 1.23517 10.6919 1.16372C10.1837 1.02582 9.6559 1.20012 9.2079 1.65372L2.3843 8.56272C1.1131 9.85002 1.4176 11.3319 2.238 12.1628C3.0591 12.9937 4.5214 13.3031 5.7933 12.0144L12.6169 5.10542C12.6614 5.06017 12.7145 5.02423 12.773 4.9997C12.8315 4.97517 12.8943 4.96253 12.9578 4.96253C13.0213 4.96253 13.0841 4.97517 13.1426 4.9997C13.2011 5.02423 13.2542 5.06017 13.2987 5.10542C13.3893 5.19758 13.4401 5.32164 13.4401 5.45087C13.4401 5.5801 13.3893 5.70416 13.2987 5.79632L6.4751 12.7053C5.6708 13.5187 4.7699 13.8603 3.9215 13.8603Z"
-                fill="#2A2A2A"
-                fill-opacity="0.5"
-              />
-            </g>
-            <defs>
-              <clipPath id="clip0_326_57050">
-                <rect width="14" height="14" fill="white" />
-              </clipPath>
-            </defs>
-          </svg>
+          <img src="svgs/attachment.svg" width="12" height="12" alt="attachment" />
 
           <label class="section-label">Dashboard URL:</label>
           <a href="https://www.dashboard.com/" class="dashboard-link" target="_blank">
@@ -68,23 +49,15 @@
         <div class="info-row">
           <div class="info-column">
             <label class="info-label">Status</label>
-            <span
+             <span
               class="status-badge"
-              [style.background-color]="getStatusColor(selectedRequest.status) + '20'"
+              [style.background-color]="getStatusBgColor(selectedRequest.status)"
               [style.color]="getStatusColor(selectedRequest.status)"
             >
-              <svg
-                width="8"
-                height="8"
-                viewBox="0 0 8 8"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M3.75 0C3.00832 0 2.2833 0.219934 1.66661 0.631989C1.04993 1.04404 0.569282 1.62971 0.285453 2.31494C0.00162482 3.00016 -0.0726377 3.75416 0.0720569 4.48159C0.216751 5.20902 0.573904 5.8772 1.09835 6.40165C1.6228 6.9261 2.29098 7.28325 3.01841 7.42795C3.74584 7.57264 4.49984 7.49838 5.18506 7.21455C5.87029 6.93072 6.45596 6.45007 6.86801 5.83339C7.28007 5.2167 7.5 4.49168 7.5 3.75C7.5 2.75544 7.10491 1.80161 6.40165 1.09835C5.69839 0.395088 4.74456 0 3.75 0ZM3.75 4.6875C3.56458 4.6875 3.38333 4.63252 3.22915 4.5295C3.07498 4.42649 2.95482 4.28007 2.88386 4.10877C2.81291 3.93746 2.79434 3.74896 2.83052 3.5671C2.86669 3.38525 2.95598 3.2182 3.08709 3.08709C3.2182 2.95598 3.38525 2.86669 3.5671 2.83051C3.74896 2.79434 3.93746 2.81291 4.10877 2.88386C4.28007 2.95482 4.42649 3.07498 4.5295 3.22915C4.63252 3.38332 4.6875 3.56458 4.6875 3.75C4.6875 3.99864 4.58873 4.2371 4.41291 4.41291C4.2371 4.58873 3.99864 4.6875 3.75 4.6875Z"
-                  [attr.fill]="getStatusColor(selectedRequest.status)"
-                />
-              </svg>
+              <span
+                class="svg-icon status-dot"
+                [style.background-color]="getStatusColor(selectedRequest.status)"
+              ></span>
               {{ selectedRequest.status }}
             </span>
           </div>
@@ -128,20 +101,8 @@
         <div class="qc-criterion-card">
           <div class="criterion-header">
             <div class="criterion-info">
-              <svg
-                width="20"
-                height="20"
-                viewBox="0 0 20 20"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  fill-rule="evenodd"
-                  clip-rule="evenodd"
-                  d="M10 17.5C10.9849 17.5 11.9602 17.306 12.8701 16.9291C13.7801 16.5522 14.6069 15.9997 15.3033 15.3033C15.9997 14.6069 16.5522 13.7801 16.9291 12.8701C17.306 11.9602 17.5 10.9849 17.5 10C17.5 9.01509 17.306 8.03982 16.9291 7.12987C16.5522 6.21993 15.9997 5.39314 15.3033 4.6967C14.6069 4.00026 13.7801 3.44781 12.8701 3.0709C11.9602 2.69399 10.9849 2.5 10 2.5C8.01088 2.5 6.10322 3.29018 4.6967 4.6967C3.29018 6.10322 2.5 8.01088 2.5 10C2.5 11.9891 3.29018 13.8968 4.6967 15.3033C6.10322 16.7098 8.01088 17.5 10 17.5ZM9.80667 13.0333L13.9733 8.03333L12.6933 6.96667L9.11 11.2658L7.25583 9.41083L6.0775 10.5892L8.5775 13.0892L9.2225 13.7342L9.80667 13.0333Z"
-                  fill="#34C759"
-                />
-              </svg>
+              <img src="svgs/check-fill.svg" width="20" height="20" alt="check-fill" />
+
               <div class="criterion-text">
                 <div class="criterion-name">Graphical Representation</div>
                 <div class="criterion-description">
@@ -161,20 +122,8 @@
         <div class="qc-criterion-card">
           <div class="criterion-header">
             <div class="criterion-info">
-              <svg
-                width="20"
-                height="20"
-                viewBox="0 0 20 20"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  fill-rule="evenodd"
-                  clip-rule="evenodd"
-                  d="M10 17.5C10.9849 17.5 11.9602 17.306 12.8701 16.9291C13.7801 16.5522 14.6069 15.9997 15.3033 15.3033C15.9997 14.6069 16.5522 13.7801 16.9291 12.8701C17.306 11.9602 17.5 10.9849 17.5 10C17.5 9.01509 17.306 8.03982 16.9291 7.12987C16.5522 6.21993 15.9997 5.39314 15.3033 4.6967C14.6069 4.00026 13.7801 3.44781 12.8701 3.0709C11.9602 2.69399 10.9849 2.5 10 2.5C8.01088 2.5 6.10322 3.29018 4.6967 4.6967C3.29018 6.10322 2.5 8.01088 2.5 10C2.5 11.9891 3.29018 13.8968 4.6967 15.3033C6.10322 16.7098 8.01088 17.5 10 17.5ZM9.80667 13.0333L13.9733 8.03333L12.6933 6.96667L9.11 11.2658L7.25583 9.41083L6.0775 10.5892L8.5775 13.0892L9.2225 13.7342L9.80667 13.0333Z"
-                  fill="#34C759"
-                />
-              </svg>
+              <img src="svgs/check-fill.svg" width="20" height="20" alt="check-fill" />
+
               <div class="criterion-text">
                 <div class="criterion-name">Branding Standards</div>
                 <div class="criterion-description">
@@ -194,20 +143,8 @@
         <div class="qc-criterion-card">
           <div class="criterion-header">
             <div class="criterion-info">
-              <svg
-                width="20"
-                height="20"
-                viewBox="0 0 20 20"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  fill-rule="evenodd"
-                  clip-rule="evenodd"
-                  d="M10 17.5C10.9849 17.5 11.9602 17.306 12.8701 16.9291C13.7801 16.5522 14.6069 15.9997 15.3033 15.3033C15.9997 14.6069 16.5522 13.7801 16.9291 12.8701C17.306 11.9602 17.5 10.9849 17.5 10C17.5 9.01509 17.306 8.03982 16.9291 7.12987C16.5522 6.21993 15.9997 5.39314 15.3033 4.6967C14.6069 4.00026 13.7801 3.44781 12.8701 3.0709C11.9602 2.69399 10.9849 2.5 10 2.5C8.01088 2.5 6.10322 3.29018 4.6967 4.6967C3.29018 6.10322 2.5 8.01088 2.5 10C2.5 11.9891 3.29018 13.8968 4.6967 15.3033C6.10322 16.7098 8.01088 17.5 10 17.5ZM9.80667 13.0333L13.9733 8.03333L12.6933 6.96667L9.11 11.2658L7.25583 9.41083L6.0775 10.5892L8.5775 13.0892L9.2225 13.7342L9.80667 13.0333Z"
-                  fill="#34C759"
-                />
-              </svg>
+              <img src="svgs/check-fill.svg" width="20" height="20" alt="check-fill" />
+
               <div class="criterion-text">
                 <div class="criterion-name">Font Sizing Guidelines</div>
                 <div class="criterion-description">
@@ -227,20 +164,8 @@
         <div class="qc-criterion-card">
           <div class="criterion-header">
             <div class="criterion-info">
-              <svg
-                width="20"
-                height="20"
-                viewBox="0 0 20 20"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  fill-rule="evenodd"
-                  clip-rule="evenodd"
-                  d="M10 17.5C10.9849 17.5 11.9602 17.306 12.8701 16.9291C13.7801 16.5522 14.6069 15.9997 15.3033 15.3033C15.9997 14.6069 16.5522 13.7801 16.9291 12.8701C17.306 11.9602 17.5 10.9849 17.5 10C17.5 9.01509 17.306 8.03982 16.9291 7.12987C16.5522 6.21993 15.9997 5.39314 15.3033 4.6967C14.6069 4.00026 13.7801 3.44781 12.8701 3.0709C11.9602 2.69399 10.9849 2.5 10 2.5C8.01088 2.5 6.10322 3.29018 4.6967 4.6967C3.29018 6.10322 2.5 8.01088 2.5 10C2.5 11.9891 3.29018 13.8968 4.6967 15.3033C6.10322 16.7098 8.01088 17.5 10 17.5ZM9.80667 13.0333L13.9733 8.03333L12.6933 6.96667L9.11 11.2658L7.25583 9.41083L6.0775 10.5892L8.5775 13.0892L9.2225 13.7342L9.80667 13.0333Z"
-                  fill="#34C759"
-                />
-              </svg>
+              <img src="svgs/check-fill.svg" width="20" height="20" alt="check-fill" />
+
               <div class="criterion-text">
                 <div class="criterion-name">Color Application</div>
                 <div class="criterion-description">
@@ -261,20 +186,8 @@
         <div class="qc-criterion-card">
           <div class="criterion-header">
             <div class="criterion-info">
-              <svg
-                width="20"
-                height="20"
-                viewBox="0 0 20 20"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  fill-rule="evenodd"
-                  clip-rule="evenodd"
-                  d="M10 17.5C10.9849 17.5 11.9602 17.306 12.8701 16.9291C13.7801 16.5522 14.6069 15.9997 15.3033 15.3033C15.9997 14.6069 16.5522 13.7801 16.9291 12.8701C17.306 11.9602 17.5 10.9849 17.5 10C17.5 9.01509 17.306 8.03982 16.9291 7.12987C16.5522 6.21993 15.9997 5.39314 15.3033 4.6967C14.6069 4.00026 13.7801 3.44781 12.8701 3.0709C11.9602 2.69399 10.9849 2.5 10 2.5C8.01088 2.5 6.10322 3.29018 4.6967 4.6967C3.29018 6.10322 2.5 8.01088 2.5 10C2.5 11.9891 3.29018 13.8968 4.6967 15.3033C6.10322 16.7098 8.01088 17.5 10 17.5ZM9.80667 13.0333L13.9733 8.03333L12.6933 6.96667L9.11 11.2658L7.25583 9.41083L6.0775 10.5892L8.5775 13.0892L9.2225 13.7342L9.80667 13.0333Z"
-                  fill="#34C759"
-                />
-              </svg>
+              <img src="svgs/check-fill.svg" width="20" height="20" alt="check-fill" />
+
               <div class="criterion-text">
                 <div class="criterion-name">Labeling Data</div>
                 <div class="criterion-description">
@@ -294,20 +207,8 @@
         <div class="qc-criterion-card">
           <div class="criterion-header">
             <div class="criterion-info">
-              <svg
-                width="20"
-                height="20"
-                viewBox="0 0 20 20"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  fill-rule="evenodd"
-                  clip-rule="evenodd"
-                  d="M10 17.5C10.9849 17.5 11.9602 17.306 12.8701 16.9291C13.7801 16.5522 14.6069 15.9997 15.3033 15.3033C15.9997 14.6069 16.5522 13.7801 16.9291 12.8701C17.306 11.9602 17.5 10.9849 17.5 10C17.5 9.01509 17.306 8.03982 16.9291 7.12987C16.5522 6.21993 15.9997 5.39314 15.3033 4.6967C14.6069 4.00026 13.7801 3.44781 12.8701 3.0709C11.9602 2.69399 10.9849 2.5 10 2.5C8.01088 2.5 6.10322 3.29018 4.6967 4.6967C3.29018 6.10322 2.5 8.01088 2.5 10C2.5 11.9891 3.29018 13.8968 4.6967 15.3033C6.10322 16.7098 8.01088 17.5 10 17.5ZM9.80667 13.0333L13.9733 8.03333L12.6933 6.96667L9.11 11.2658L7.25583 9.41083L6.0775 10.5892L8.5775 13.0892L9.2225 13.7342L9.80667 13.0333Z"
-                  fill="#34C759"
-                />
-              </svg>
+              <img src="svgs/check-fill.svg" width="20" height="20" alt="check-fill" />
+
               <div class="criterion-text">
                 <div class="criterion-name">Accurate Data Customization</div>
                 <div class="criterion-description">
@@ -327,20 +228,7 @@
         <div class="qc-criterion-card">
           <div class="criterion-header">
             <div class="criterion-info">
-              <svg
-                width="20"
-                height="20"
-                viewBox="0 0 20 20"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  fill-rule="evenodd"
-                  clip-rule="evenodd"
-                  d="M10 17.5C10.9849 17.5 11.9602 17.306 12.8701 16.9291C13.7801 16.5522 14.6069 15.9997 15.3033 15.3033C15.9997 14.6069 16.5522 13.7801 16.9291 12.8701C17.306 11.9602 17.5 10.9849 17.5 10C17.5 9.01509 17.306 8.03982 16.9291 7.12987C16.5522 6.21993 15.9997 5.39314 15.3033 4.6967C14.6069 4.00026 13.7801 3.44781 12.8701 3.0709C11.9602 2.69399 10.9849 2.5 10 2.5C8.01088 2.5 6.10322 3.29018 4.6967 4.6967C3.29018 6.10322 2.5 8.01088 2.5 10C2.5 11.9891 3.29018 13.8968 4.6967 15.3033C6.10322 16.7098 8.01088 17.5 10 17.5ZM9.80667 13.0333L13.9733 8.03333L12.6933 6.96667L9.11 11.2658L7.25583 9.41083L6.0775 10.5892L8.5775 13.0892L9.2225 13.7342L9.80667 13.0333Z"
-                  fill="#34C759"
-                />
-              </svg>
+              <img src="svgs/check-fill.svg" width="20" height="20" alt="check-fill" />
 
               <div class="criterion-text">
                 <div class="criterion-name">Graphical Representation</div>
@@ -361,20 +249,8 @@
         <div class="qc-criterion-card">
           <div class="criterion-header">
             <div class="criterion-info">
-              <svg
-                width="20"
-                height="20"
-                viewBox="0 0 20 20"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  fill-rule="evenodd"
-                  clip-rule="evenodd"
-                  d="M10 17.5C10.9849 17.5 11.9602 17.306 12.8701 16.9291C13.7801 16.5522 14.6069 15.9997 15.3033 15.3033C15.9997 14.6069 16.5522 13.7801 16.9291 12.8701C17.306 11.9602 17.5 10.9849 17.5 10C17.5 9.01509 17.306 8.03982 16.9291 7.12987C16.5522 6.21993 15.9997 5.39314 15.3033 4.6967C14.6069 4.00026 13.7801 3.44781 12.8701 3.0709C11.9602 2.69399 10.9849 2.5 10 2.5C8.01088 2.5 6.10322 3.29018 4.6967 4.6967C3.29018 6.10322 2.5 8.01088 2.5 10C2.5 11.9891 3.29018 13.8968 4.6967 15.3033C6.10322 16.7098 8.01088 17.5 10 17.5ZM9.80667 13.0333L13.9733 8.03333L12.6933 6.96667L9.11 11.2658L7.25583 9.41083L6.0775 10.5892L8.5775 13.0892L9.2225 13.7342L9.80667 13.0333Z"
-                  fill="#34C759"
-                />
-              </svg>
+              <img src="svgs/check-fill.svg" width="20" height="20" alt="check-fill" />
+
               <div class="criterion-text">
                 <div class="criterion-name">Avoid Using Tables for Details</div>
                 <div class="criterion-description">
