--- a/src/app/features/business-user/components/business-review-sidebar/business-review-sidebar.html
+++ b/src/app/features/business-user/components/business-review-sidebar/business-review-sidebar.html
@@ -9,21 +9,7 @@
       [class.active]="activeMenuItem === 'overview'"
       (click)="selectMenuItem('overview')"
     >
-      <svg
-        width="24"
-        height="24"
-        viewBox="0 0 24 24"
-        fill="none"
-        xmlns="http://www.w3.org/2000/svg"
-      >
-        <path
-          d="M14 20V14C14 12.8954 13.1046 12 12 12C10.8954 12 10 12.8954 10 14V20M10.9833 3.60011L4.98335 7.14177C4.37395 7.50149 4 8.15646 4 8.8641V18C4 19.1046 4.89543 20 6 20H18C19.1046 20 20 19.1046 20 18V8.8641C20 8.15646 19.6261 7.50149 19.0167 7.14177L13.0167 3.60011C12.3894 3.22988 11.6106 3.22988 10.9833 3.60011Z"
-          stroke="#1E7A60"
-          stroke-width="1.4"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-        />
-      </svg>
+        <img src="svgs/Home.svg" width="24" height="24" alt="Home" />
 
       <span class="menu-label">Overview</span>
     </div>
@@ -31,41 +17,13 @@
     <!-- Requests Menu Item (Collapsible) -->
     <div class="menu-item-collapsible">
       <div class="menu-item-header" (click)="toggleRequests()">
-        <svg
-          width="24"
-          height="24"
-          viewBox="0 0 24 24"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            d="M14.186 2.75293V6.34893C14.186 6.83593 14.381 7.30393 14.726 7.64893C15.0729 7.9943 15.5425 8.18812 16.032 8.18793H20.157"
-            stroke="#888888"
-            stroke-width="1.5"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          />
-          <path
-            d="M7.647 7.64703H10.912M7.647 12H16.353M7.647 16.353H16.353M20.25 8.56803V17.136C20.2301 17.6965 20.0996 18.2474 19.8658 18.7571C19.6321 19.2669 19.2997 19.7253 18.888 20.106C18.4759 20.4885 17.9925 20.786 17.4654 20.9817C16.9383 21.1773 16.3778 21.2671 15.816 21.246H8.226C7.66074 21.2719 7.09594 21.1859 6.56398 20.993C6.03201 20.8001 5.54335 20.5041 5.126 20.122C4.71027 19.7403 4.37454 19.2797 4.13833 18.7671C3.90211 18.2545 3.77011 17.7001 3.75 17.136V6.86203C3.76985 6.3016 3.90042 5.75065 4.13418 5.24091C4.36794 4.73118 4.70026 4.27274 5.112 3.89203C5.52408 3.50955 6.00748 3.21201 6.53458 3.01641C7.06169 2.8208 7.62217 2.73096 8.184 2.75203H13.898C14.7703 2.74895 15.6123 3.07169 16.259 3.65703L19.219 6.37903C19.5349 6.65111 19.7899 6.98663 19.9675 7.36378C20.1452 7.74092 20.2414 8.15123 20.25 8.56803Z"
-            stroke="#888888"
-            stroke-width="1.5"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          />
-        </svg>
+               <img src="svgs/Requests Icon.svg" width="24" height="24" alt="New Request" />
+
 
         <span class="menu-label">Requests</span>
-        <svg
-          class="menu-arrow"
-          [class.expanded]="requestsExpanded"
-          width="16"
-          height="16"
-          viewBox="0 0 24 24"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <polyline points="6 9 12 15 18 9"></polyline>
-        </svg>
+              <img class="menu-arrow" src="svgs/arrow-up-simple.svg" width="20" height="20"  class="menu-arrow"
+          [class.expanded]="requestsExpanded" />
+
       </div>
 
       <!-- Submenu Items -->
@@ -108,22 +66,8 @@
   <!-- Logout Section -->
   <div class="sidebar-section sidebar-footer">
     <div class="menu-item" (click)="logout()">
-      <svg
-        class="menu-icon"
-        width="20"
-        height="20"
-        viewBox="0 0 24 24"
-        fill="none"
-        xmlns="http://www.w3.org/2000/svg"
-      >
-        <path
-          d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4M16 17l5-5m0 0l-5-5m5 5H9"
-          stroke="currentColor"
-          stroke-width="2"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-        />
-      </svg>
+            <img src="svgs/log-out.svg" width="24" height="24" alt="log-out" />
+
       <span class="menu-label">Logout</span>
     </div>
   </div>
@@ -131,11 +75,7 @@
   <!-- Create New Request Card -->
   <div class="create-request-card">
     <div class="card-icon">
-    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-<path fill-rule="evenodd" clip-rule="evenodd" d="M8.14551 22.125C9.6042 22.125 11.0031 21.5455 12.0346 20.5141C13.066 19.4826 13.6455 18.0837 13.6455 16.625C13.6455 15.1663 13.066 13.7674 12.0346 12.7359C11.0031 11.7045 9.6042 11.125 8.14551 11.125C6.68682 11.125 5.28787 11.7045 4.25642 12.7359C3.22497 13.7674 2.64551 15.1663 2.64551 16.625C2.64551 18.0837 3.22497 19.4826 4.25642 20.5141C5.28787 21.5455 6.68682 22.125 8.14551 22.125ZM8.14551 13.132C8.27812 13.132 8.40529 13.1847 8.49906 13.2784C8.59283 13.3722 8.64551 13.4994 8.64551 13.632V16.125H11.1385C11.2711 16.125 11.3983 16.1777 11.4921 16.2714C11.5858 16.3652 11.6385 16.4924 11.6385 16.625C11.6385 16.7576 11.5858 16.8848 11.4921 16.9786C11.3983 17.0723 11.2711 17.125 11.1385 17.125H8.64551V19.618C8.64551 19.7506 8.59283 19.8778 8.49906 19.9716C8.40529 20.0653 8.27812 20.118 8.14551 20.118C8.0129 20.118 7.88572 20.0653 7.79195 19.9716C7.69819 19.8778 7.64551 19.7506 7.64551 19.618V17.125H5.15251C5.0199 17.125 4.89272 17.0723 4.79895 16.9786C4.70519 16.8848 4.65251 16.7576 4.65251 16.625C4.65251 16.4924 4.70519 16.3652 4.79895 16.2714C4.89272 16.1777 5.0199 16.125 5.15251 16.125H7.64551V13.632C7.64551 13.4994 7.69819 13.3722 7.79195 13.2784C7.88572 13.1847 8.0129 13.132 8.14551 13.132Z" fill="black"/>
-<path d="M5.9375 9.375V5.375C5.9375 4.44674 6.30625 3.5565 6.96263 2.90013C7.619 2.24375 8.50924 1.875 9.4375 1.875H11.8855C12.3846 1.87496 12.878 1.98168 13.3325 2.188M13.3325 2.188C13.7148 2.3618 14.0637 2.60298 14.3605 2.9L20.3285 8.87C20.6285 9.17 20.8685 9.516 21.0395 9.895M13.3325 2.188L13.3335 7.895C13.3335 8.42543 13.5442 8.93414 13.9193 9.30921C14.2944 9.68429 14.8031 9.895 15.3335 9.895H21.0395M15.3955 20.375H17.8535C18.7818 20.375 19.672 20.0063 20.3284 19.3499C20.9848 18.6935 21.3535 17.8033 21.3535 16.875V11.345C21.3535 10.84 21.2445 10.346 21.0395 9.895" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-</svg>
-
+    <img src="svgs/new-request.svg" width="24" height="24" alt="Requests" />
     </div>
 
     <h3 class="card-title">Create New Request</h3>
