--- a/src/app/features/qc-user/components/qc-overview/qc-overview.html
+++ b/src/app/features/qc-user/components/qc-overview/qc-overview.html
@@ -35,40 +35,12 @@
               (input)="onSearch(searchQuery)"
               class="search-input"
             />
-            <svg
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              class="search-icon"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M13.3891 13.3891L19 19M9.5 15C12.5376 15 15 12.5376 15 9.5C15 6.46243 12.5376 4 9.5 4C6.46243 4 4 6.46243 4 9.5C4 12.5376 6.46243 15 9.5 15Z"
-                stroke="#454545"
-                stroke-width="1.4"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-            </svg>
+            <img class="search-icon" src="svgs/search.svg" width="20" height="20" alt="search" />
           </div>
           <button class="filter-button">
             Filter
-            <svg
-              width="24"
-              height="24"
-              viewBox="0 0 24 24"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M4.00024 7H20.0002M7.00018 12H17.0002M11.0002 17H13.0002"
-                stroke="#454545"
-                stroke-width="1.4"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-            </svg>
+                       <img src="svgs/filter-list.svg" width="24" height="24" alt="filter-list" />
+
           </button>
         </div>
 
