--- a/src/app/features/qc-user/components/request-table/request-table.css
+++ b/src/app/features/qc-user/components/request-table/request-table.css
@@ -59,19 +59,45 @@ font-weight: 500;
   text-decoration: underline;
 }
 
-.status-badge {
-  display: inline-block;
-  padding: 4px 8px;
-  border-radius: 16px;
-  font-size: 12px;
-  font-weight: 500;
-}
-
 .priority-badge {
   display: inline-block;
   padding: 4px 8px;
   font-size: 12px;
   font-weight: 500;
+}
+
+.svg-icon {
+  display: inline-block;
+  width: 18px;
+  height: 18px;
+  mask-size: contain;
+  mask-repeat: no-repeat;
+  mask-position: center;
+  -webkit-mask-size: contain;
+  -webkit-mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+}
+
+.priority-icon {
+  mask-image: url('/svgs/flag.svg');
+  -webkit-mask-image: url('/svgs/flag.svg');
+}
+
+.status-badge {
+  display: inline-flex;
+  align-items: center;
+  padding: 4px 8px;
+  border-radius: 16px;
+  font-size: 12px;
+  font-weight: 500;
+}
+.status-dot {
+  width: 18px;
+  height: 18px;
+  margin-right: 6px;
+  flex-shrink: 0;
+  mask-image: url('/svgs/Dot.svg');
+  -webkit-mask-image: url('/svgs/Dot.svg');
 }
 
 .action-icons {
